Issue #3000447 by dcam, Nick Hope, gnikolovski: Hierarchical taxonomy menu always collapses

--- a/css/hierarchical-taxonomy-menu.css
+++ b/css/hierarchical-taxonomy-menu.css
@@ -16,6 +16,7 @@
   cursor: pointer;
 }
 
-.hierarchical-taxonomy-menu .menu {
+/*Hide all submenus by default.*/
+.hierarchical-taxonomy-menu ul.menu {
   display: none;
 }
